--- a/TestWebApp1/Views/_ViewImports.cshtml
+++ b/TestWebApp1/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TestWebApp1
-@using TestWebApp1.Models
+﻿@using HomePageApp
+@using HomePageApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
